src/test/success/redeclaring_function_inside_function.egern
func hello(a: int): int {
    if (a <= 0) {
        return 0
    }
    print(hello(a - 1))
    func hello(a: int): int {
        return a
    }
    print(hello(a + 1))
    return 0
}

var x = 4
print(hello(x))
