src/test/fail/return_missing_in_branch_fail.egern
func square(n: int): int {
    if (n > 3) {
        print(0)
    } else {
        return n * n
    }
}

square(4);
